@@ -1,5 +1,8 @@
+* Mon Dec 9 2002 Philip Tellis
+- Changed u_char to unsigned char
+
 * Tue Nov 19 2002 Philip Tellis
-- Added code to process a voice chat invite
+- Added code to process a voice chat invite.  Doesn't do anything.
 
 * Mon Nov 18 2002 Philip Tellis
 - Multiple offline messages are now received correctly
